accessToken만 사용한 oAuth2 버전 / kakao,google,naver 로그인 성공 - 1차 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,5 @@ out/
 ## 내가 jwt 보안을 우려하여 따로 파일로 빼두고 gitignore에 추가해둠.
 **/application-jwt.properties
 
-## 내가 redis 보안을 우려하여 따로 파일로 빼두고 gitignore에 추가해둠.
-**/application-redis.properties
+## 내가 oauth 보안을 우려하여 따로 파일로 빼두고 gitignore에 추가해둠.
+**/application-oauth.properties
