--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ logging.level.com.shj=debug
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.profiles.active=mysql,jwt
+spring.profiles.active=mysql,jwt,oauth
